# perturb-response-poc

./: Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
audit/: feature_importance.md  feature_importance_reliability.tsv
data/: .gitignore  manifest.yaml
docs/: architecture.md  what-is-out-of-scope.md
docs/release-notes/: v0.1.md
scripts/: check_english_only.py  install-hooks.sh  interpret_perturb.py  run_lab.sh
src/perturbresp/: __init__.py  audit.py  canary.py  effect.py  pipeline.py  predict.py  synth.py
tests/: test_canary.py  test_effect.py  test_interpret.py  test_pipeline.py  test_predict.py  test_synth.py
tests/fixtures/: canary.json
