[project]
name = "perturbresp"
version = "0.1.0"
description = "Capability-portrait POC: perturbation-response effect recovery + held-out response prediction (Perturb-seq style)."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "H. Ryan Kim" },
]
requires-python = ">=3.11"

dependencies = [
    "click>=8.1.7",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.4.0",
    "pyyaml>=6.0.1",
    "requests>=2.31.0",
    "mlflow>=2.11.0",
]

[project.optional-dependencies]
# Canonical single-cell perturbation stack the method targets on real data.
perturb = [
    "anndata>=0.10.0",
    "scanpy>=1.10.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.4.0",
]

[project.scripts]
perturbresp = "perturbresp.pipeline:cli"

[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/perturbresp"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
pythonpath = ["src"]   # run tests from a fresh clone (no editable install needed)
